k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: islamic-app
  labels:
    name: islamic-app
    app: islamic-flask-app
